IBX-5247: Fixed alignment in table filters (#731)

--- a/src/bundle/Resources/public/scss/_forms.scss
+++ b/src/bundle/Resources/public/scss/_forms.scss
@@ -77,6 +77,10 @@ form:not(.form-inline) {
     box-sizing: border-box;
     margin-top: calculateRem(4px);
 
+    &:empty {
+        margin-top: 0;
+    }
+
     &:not(& > &) {
         flex-direction: column;
     }
